k8s/manifest/base/distribution/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: distribution
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: baseline
    pod-security.kubernetes.io/warn: baseline
