k8s/manifest/base/distribution/registry.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: registry
  labels:
    app: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      containers:
        - name: registry
          image: registry:3.1.1
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /v2/
              port: 5000
          readinessProbe:
            httpGet:
              path: /v2/
              port: 5000
          securityContext:
            readOnlyRootFilesystem: true
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
          volumeMounts:
            - name: data
              mountPath: /var/lib/registry
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: nfs-client
        resources:
          requests:
            storage: 32Gi

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-ui
  labels:
    app: registry-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry-ui
  template:
    metadata:
      labels:
        app: registry-ui
    spec:
      containers:
        - name: registry-ui
          image: joxit/docker-registry-ui:2.6.0
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
          readinessProbe:
            httpGet:
              path: /
              port: 80
          resources:
            requests:
              cpu: 100m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 64Mi

---

apiVersion: v1
kind: Service
metadata:
  name: registry-service
spec:
  selector:
    app: registry
  ports:
    - port: 5000

---

apiVersion: v1
kind: Service
metadata:
  name: registry-ui-service
spec:
  selector:
    app: registry-ui
  ports:
    - port: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: registry-ingress
  annotations:
    tailscale.com/ingress-class: tailscale
spec:
  ingressClassName: tailscale
  tls:
    - hosts:
        - my-registry
  rules:
    - host: my-registry
      http:
        paths:
          - path: /v2
            pathType: Prefix
            backend:
              service:
                name: registry-service
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: registry-ui-service
                port:
                  number: 80
